updated parameter description

--- a/Metabolomics_MultivariateDataAnalysis.ipynb
+++ b/Metabolomics_MultivariateDataAnalysis.ipynb
@@ -2303,7 +2303,7 @@
     "By defining different parameters within the plotPCoA function:\n",
     "\n",
     "- <b>distmetric</b>: A distance metric of your choice, including \"euclidean\", \"maximum\", \"manhattan\", \"canberra\", \"binary\" or \"minkowski\".\n",
-    "- <b>cat</b>: How should the samples be grouped for PERMANOVA, this can be any column name of your metadata.\n",
+    "- <b>catper</b>: How should the samples be grouped for PERMANOVA, this can be any column name of your metadata.\n",
     "- <b>catcols</b>: According to what groups should the samples be colored on the PCoA, this can be any column name of your metadata.\n",
     "- <b>mdtype</b>: Either 'categorical' or 'continuous', this value defines whether a continuous or categorical color scale should be used for the PCoA.\n",
     "- <b>cols</b>: Colors used for plotting the groups in the PCoA. The length of this object should be equal to the number of groups plotted.\n",
